2010-11-02  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with clutter git master.

	* clutter/src/backend.hg: Use no_default_handler with the signals,
	because ClutterBackendClass is now hidden.

2010-10-21  Chris Kühl  <chrisk@openismus.com>

	Fixed parameter names in Clutter::Cairo::Texture create function.

	* cairo-texture.hg: Changed create parameters from width and height
	to surface_width and surface_height, respectively.

2010-10-21  Chris Kühl  <chrisk@openismus.com>

	Fixed parameter names in Clutter::Cairo::Texture ctor.

	* cairo-texture.hg: Changed ctor parameters from width and height
	o surface_width and surface_height, respectively.

1.3.1:

2010-09-17  Chris Kühl  <chrisk@openismus.com>

	Fixed typo in Script::get_object (constverrsion != constversion)

	* clutter/src/script.hg: Fixed typo in get_object.

2010-09-17  Chris Kühl  <chrisk@openismus.com>

	Fixed reference counting issue with Alpha::get_timeline

	* clutter/src/alpha.hg: Added refreturn to get_timeline.

2010-09-15  Chris Kühl  <chrisk@openismus.com>

	Removed use of NULL and changed use of uint to guint.

	* clutter/src/behaviour.ccg: Removed use of NULL and
	changed uint to guint.
	* clutter/src/container.ccg:
	* clutter/src/score.ccg:
	* clutter/src/script.ccg:

2010-09-15  Chris Kühl  <chrisk@openismus.com>

	Corrected SlotAlphaFunc documentation.

	* clutter/src/alpha.hg: Corrected SlotAlphaFunc documentation.

2010-09-13  Murray Cumming  <murrayc@murrayc.com>

	Remove extra ; to avoid compiler warnings.

	* clutter/src/clone.hg:
	* clutter/src/rectangle.hg: Remove extra ;s.

2010-09-13  Murray Cumming  <murrayc@murrayc.com>

	Timeline: Fix a compilation warning.

	* clutter/src/timeline.ccg: Use the correct type in the for() loop.

2010-09-07  Chris Kühl  <chrisk@openismus.com>

	Fix issue with last commit where returned vectors were 2x intended size.

	* clutter/src/behaviour.ccg: Fixed vector size issue.
	* clutter/src/container.ccg: Fixed vector size issue.