@@ -44,6 +44,7 @@ AC_PROG_LIBTOOL
 AC_SUBST([CLUTTERMM_MODULES], ['clutter-1.0 >= 1.3.8 pangomm-1.4 >= 2.24 atkmm-1.6 >= 2.20'])
 PKG_CHECK_MODULES([CLUTTERMM], [$CLUTTERMM_MODULES])
 MM_PKG_CONFIG_SUBST([GMMPROC_DIR], [--variable=gmmprocdir glibmm-2.4])
+MM_PKG_CONFIG_SUBST([GMMPROC_EXTRA_M4_DIR], [--variable=gmmprocm4dir pangomm-1.4 atkmm-1.6])
 
 MM_ARG_ENABLE_DOCUMENTATION
 MM_ARG_WITH_TAGFILE_DOC([libstdc++.tag], [mm-common-libstdc++])
